--- a/data_analysis/da.html
+++ b/data_analysis/da.html
@@ -5,20 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Tom's Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<meta name="author" content="" />
+	<meta name="description" content="Tom's Portfolio Website" />
+	<meta name="keywords" content="portfolioweb, website, github, computer science, data analytics" />
+	<meta name="author" content="Gyungtai Tom Min" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+
+	<!--quora icon-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -50,6 +44,10 @@
 	<![endif]-->
 
 	</head>
+
+	<!--- Github ribbon ----------->
+<a href="https://rudxowl.github.io/PortfolioWeb/" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+
 	<body>
 	<div id="colorlib-page">
 		<div class="container-wrap">
@@ -60,21 +58,11 @@
 				<h1 id="colorlib-logo"><a href="index.html">Gyungtai Tom Min</a></h1>
 				<p><strong>Computer Science / Statistics | University of Devner</strong></p>
 			</div>
-            <div class="text-center"><a href="https://rudxowl.github.io/PortfolioWeb/">Home</a></div>
-            <br>
-            <br><br>
-            <br>
-            <br>
-            <nav id="colorlib-main-menu" role="navigation" class="navbar">
 
-            <div class="colorlib-footer">
-            <ul>
-                <p><strong><small>Connect me at:</small></strong></p>
-					<li><a href="mailto: rudxowl@gmail.com"><i class="icon-mail"></i></a></li>
-					<li><a href="https://github.com/rudxowl"><i class="icon-github"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
-				</ul>
-            </div>
+            <nav id="colorlib-main-menu" role="navigation" class="navbar">
+							<ul>
+								<li><a href="https://rudxowl.github.io/PortfolioWeb/"style="color: black;"><Strong>Home</Strong></a></li>
+							</ul>
             </nav>
 		</aside>
 
@@ -87,19 +75,11 @@
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<h2 class="colorlib-heading">Data Analytics</h2>
+										<h2>Data Analytics</h2>
+										<hr>
 										<p>If you want to see the code of my projects, <a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Click Here</Strong></a></p>
 
 
-																				<p><a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Automatic Data Analysis Program in Python</strong></a></p>
-																				<p>This program is an automatic analysis program which shows the relationship between sex ratio and the other varialbe user chose. The program provides serveral data analytic test options such as T test, ANOVA test, Regression test.
-																					<br> If you choose one test option it will show you a brif analysis report about the relationship between sex ratio and the other variable</p>
-
-																			<p><img src="images/da1.png"></p>
-																			<p><img src="images/da2.PNG"></p>
-																			<p><img src="images/da3.PNG"></p>
-																			<p><img src="images/da4.PNG"></p>
-																			<br><br>
 									</div>
 								</div>
 							</div>
@@ -107,6 +87,43 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="colorlib-about" data-section="Automatic Data Analysis">
+						<div class="colorlib-narrow-content">
+							<div class="row">
+								<div class="col-md-12">
+									<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+										<div class="col-md-12">
+											<div class="Automatic Data Analysis-desc">
+																						<p><h2>Automatic Data Analysis Program in Python</h2></p>
+																						<p>This program is an automatic analysis program which shows the relationship between sex ratio and the other varialbe user chose. The program provides serveral data analytic test options such as T test, ANOVA test, Regression test.
+																							<br> If you choose one test option it will show you a brif analysis report about the relationship between sex ratio and the other variable</p>
+													</div>
+
+																					<p><img src="images/da1.png"></p>
+																					<p><img src="images/da2.PNG"></p>
+																					<p><img src="images/da3.PNG"></p>
+																					<p><img src="images/da4.PNG"></p>
+																					<br><br>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</section>
+
+			<section class="colorlib-footer" data-section="footer">
+			<div class="colorlib-footer">
+					 <p style="text-align: center; margin-bottom: 0px; font-size: 30px;">
+		 <a href="mailto: rudxowl@gmail.com"style="color: black;"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+		 <a href="https://www.linkedin.com/in/gyungtai-min-579287136//"style="color: black;"><i class="fa fa-linkedin-square"></i></a>&nbsp;&nbsp;
+		 <a href="https://github.com/rudxowl/PortfolioWeb"style="color: black;"><i class="fa fa-github"></i></a>
+		 </p>
+
+					<p style="text-align: center; margin-bottom: 0px;"><strong>2019 &copy; Gyungtai Tom Min</strong></p>
+</div>
+</section>
 
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
