--- a/index.html
+++ b/index.html
@@ -5,20 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Tom's Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<meta name="author" content="" />
+	<meta name="description" content="Tom's Portfolio Website" />
+	<meta name="keywords" content="portfolioweb, website, github, computer science, data analytics" />
+	<meta name="author" content="Gyungtai Tom Min" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+
     <!--quora icon-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -64,6 +55,10 @@
 
 
 	</head>
+
+	<!--- Github ribbon ----------->
+<a href="https://rudxowl.github.io/PortfolioWeb/" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+
 	<body>
 	<div id="colorlib-page">
 		<div class="container-wrap">
@@ -77,30 +72,24 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<!--<li class="active"><a href="#" data-nav-section="home">Home</a></li> -->
+						<!--<li class="active"><a href="#" data-nav-section="home">About</a></li> -->
 						<li><a href="#" data-nav-section="about">About</a></li>
-					<!--	<li><a href="#" data-nav-section="services">Services</a></li> -->
+						<!--	<li><a href="#" data-nav-section="services">Projects</a></li> -->
+						<li><a href="#" data-nav-section="projects">Projects</a></li>
+					<!--	<li><a href="#" data-nav-section="services">Skills</a></li> -->
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 					<!--	<li><a href="#" data-nav-section="education">Education</a></li> -->
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
+						<!--	<li><a href="#" data-nav-section="education">Education</a></li> -->
+							<li><a href="#" data-nav-section="education">Education</a></li>
 					<!--	<li><a href="#" data-nav-section="work">Work</a></li>-->
-						<li><a href="#" data-nav-section="contact">Contact</a></li><br>
+						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 
-             <div class="colorlib-footer">
-                 <h3><strong><a href="Resume(Gyungtai_Min).pdf">My Resume</a></strong></h3>
-
-
-
-            <ul>
-							    <p><strong><small>Connect me at:</small></strong></p>
-						<li><a href="mailto: rudxowl@gmail.com"><i class="icon-mail"></i></a></li>
-						<li><a href="https://github.com/rudxowl/PortfolioWeb"><i class="icon-github"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/gyungtai-min-579287136//"><i class="icon-linkedin2"></i></a></li>
-				</ul>
-
-            </div>
+				<div class="colorlib-footer">
+						<h3><strong><a href="Resume(Gyungtai_Min).pdf">My Resume</a></strong></h3>
+</div>
 </nav>
 		</aside>
 
@@ -115,37 +104,60 @@
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<h2 class="colorlib-heading">About Me</h2>
-										<p>Hello! <strong>Tom </strong>is Computer Science and Statistics undergraduate student at University of Denver.</p>
-										<p>He has both Computer Science and Business Analytics background, and focus on Data Analytics.</p>
+										<h2>About Me</h2>
+										<hr>
+										<p>Hello!
+											<br>
+											<strong>Tom </strong>is Computer Science and Statistics undergraduate student at University of Denver.
+											He has both Computer Science and Business Analytics background, and focus on Data Analytics.</p>
 									</div>
 								</div>
 							</div>
-							<div class="row">
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
-									<a href="data_analysis/da.html" target="_blank"><div class="services color-1">
-										<span class="icon2"><i class="icon-chart-line"></i></span>
-										<h3>Data<br> Analytics</h3>
-									</div>
-								</a></div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<a href="web_dev/webdev.html" target="_blank"><div class="services color-2">
-										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Web<br> Development</h3>
-									</div>
-								</a></div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
-									<a href="software_dev/software.html" target="_blank"><div class="services color-3">
-										<span class="icon2"><i class="fa fa-code"></i></span>
-										<h3>Software<br> Development</h3>
-									</div>
-							</a></div>
 
-						</div>
 					</div>
 				</div>
                 </div>
 			</section>
+
+			<section class="colorlib-projects" data-section="projects">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="col-md-12">
+									<div class="projects-desc">
+										<h2>Projects</h2>
+										<hr>
+										<p>If you want to check my projects, <Strong>Click</Strong> below Icons.</p>
+									</div>
+								</div>
+							</div>
+
+										<div class="row">
+											<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
+												<a href="data_analysis/da.html" target="_blank"><div class="services color-1">
+													<span class="icon2"><i class="icon-chart-line"></i></span>
+													<h3>Data<br> Analytics</h3>
+												</div>
+											</a></div>
+											<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+												<a href="web_dev/webdev.html" target="_blank"><div class="services color-2">
+													<span class="icon2"><i class="icon-data"></i></span>
+													<h3>Web<br> Development</h3>
+												</div>
+											</a></div>
+											<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
+												<a href="software_dev/software.html" target="_blank"><div class="services color-3">
+													<span class="icon2"><i class="fa fa-code"></i></span>
+													<h3>Software<br> Development</h3>
+												</div>
+										</a></div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 
 
@@ -154,10 +166,11 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 						<!--	<span class="heading-meta">My Specialty</span> -->
-							<h2 class="colorlib-heading animate-box">Skills</h2>
+							<h2>Skills</h2>
+								<hr>
 						</div>
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<h3 class="colorlib-heading animate-box">Programming</h3>
+							<h3>Programming</h3>
 						</div>
 					</div>
 					<div class="row">
@@ -190,7 +203,7 @@
 							<div class="progress-wrap">
 								<h3>R</h3>
 								<div class="progress">
-									<div class="progress-bar color-11" role="progressbar" aria-valuenow="70"
+									<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 										aria-valuemin="0" aria-valuemax="100" style="width:70%">
 										<span>70%</span>
 										</div>
@@ -231,7 +244,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<h3 class="colorlib-heading animate-box">Database</h3>
+							<h3>Database</h3>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
@@ -256,7 +269,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<h3 class="colorlib-heading animate-box">Data Anaytics</h3>
+							<h3>Data Anaytics</h3>
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
@@ -299,7 +312,8 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<h2 class="colorlib-heading animate-box">Work Experience</h2>
+							<h2>Work Experience</h2>
+							<hr>
 						</div>
 					</div>
 					<div class="row">
@@ -314,7 +328,7 @@
 														 </div>
 
 														 <div class="timeline-label">
-																<h2><a href="#">A&K Media</a> <span>Sep 2018 - Present</span></h2>
+																<h2><a href="#">A&K Media</a> <span>Sep.2018 - Present</span></h2>
 																					 <p><strong>Data Analyst(Web)</strong>
 																						 <br>Analyzed data of client's business and their website using Google Analytics, Google Tag Manager, Tableau, Advanced Microsoft Excel.</p>
 																						 Optimized Google Analytics tool, Google Ads and campaign to improve marketing strategy.
@@ -326,17 +340,35 @@
 									 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
-					               <div class="timeline-icon color-1">
+					               <div class="timeline-icon color-2">
 					                  <i class="icon-pen2"></i>
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Seoul Institute of The Art</a> <span>June 2014 - June 2015</span></h2>
+					                  <h2><a href="#">Seoul Institute of The Art</a> <span>Jun.2014 - Jun.2015</span></h2>
 					                  <p><strong>Social Media Marketing Editor</strong><br>Managed social media channels such as Facebook, Instagram and blog.
 															<br>Analyzed trendy keywords to maintain high advertising exposure for the university.</p>
 					               </div>
 					            </div>
 					         </article>
+
+									 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+											<div class="timeline-entry-inner">
+
+												 <div class="timeline-icon color-3">
+														<i class="icon-group"></i>
+												 </div>
+
+												 <div class="timeline-label">
+														<h2><a href="#">Republic of Korea Army</a> <span>Oct.2010- Sep.2012</span></h2>
+														<p><strong>Military Police</strong>
+															<br>Responsible for policing the areas of responsibility of the armed forces against all criminal activity by
+															military or civilian personnel.
+															<br>Managed training of 8 fellow team members as a senior soldier.</p>
+												 </div>
+											</div>
+									 </article>
+
 
 					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
 					            <div class="timeline-entry-inner">
@@ -351,44 +383,69 @@
 			</section>
 
 
+			<section class="colorlib-education" data-section="education">
+						<div class="colorlib-narrow-content">
+							<div class="row">
+								<div class="col-md-12">
+									<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+										<div class="col-md-12">
+											<div class="education-desc">
+												<h2>Education</h2>
+												<hr>
 
+												<h2><a href="https://www.du.edu/">University of Denver</a></h2> <span>Sep.2016 - Jun.2019</span>
+												<p><strong>Applied Computing, Minor in Statistics</strong>
+													<br>Honors: Long's Peak Scholarship
+													<br>
+
+													<h2><a href="https://www.seoularts.ac.kr/mbs/kr/index.jsp">Seoul Institute of The Arts</a></h2> <span>Mar.2013 - Jun.2016</span></h2>
+													<p><strong>Advertising and Marketing in Communication Department</strong>
+
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</section>
 
 
 			<section class="colorlib-contact" data-section="contact">
 				<div class="colorlib-narrow-content">
 					<div class="row">
-                        <div class="col-md-12">
+            <div class="col-md-12">
 						<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-							<h2 class="colorlib-heading">Contact</h2>
-                            <p>Feel free to contact me!</p>
-						</div>
-					</div>
-                    </div>
-					<div class="row">
-						<div class="col-md-5">
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
-									<i class="icon-mail"></i>
-								</div>
-								<div class="colorlib-text">
-									<p><strong><a href = "mailto: rudxowl@gmail.com">rudxowl@gmail.com</a></strong></p>
-								</div>
-							</div>
+							<h2>Contact</h2>
+							<hr>
+              <p>Feel free to contact me!</p>
 
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
+
+
+									<p>
+									<i class="fa fa-envelope"></i>
+									<strong><a href = "mailto: rudxowl@gmail.com">rudxowl@gmail.com</a></strong>
+
+									<br>
 									<i class="icon-linkedin2"></i>
-								</div>
-								<div class="colorlib-text">
-                	<p><strong><a href="https://www.linkedin.com/in/gyungtai-min-579287136//">Linkedin</a></strong></p>
+                	<strong><a href="https://www.linkedin.com/in/gyungtai-min-579287136//">Linkedin</a></strong></p>
 								</div>
 							</div>
-
-
 						</div>
 					</div>
-                </div>
 			</section>
+
+
+			<section class="colorlib-footer" data-section="footer">
+			<div class="colorlib-footer">
+					 <p style="text-align: center; margin-bottom: 0px; font-size: 30px;">
+		 <a href="mailto: rudxowl@gmail.com"style="color: black;"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+		 <a href="https://www.linkedin.com/in/gyungtai-min-579287136//"style="color: black;"><i class="fa fa-linkedin-square"></i></a>&nbsp;&nbsp;
+		 <a href="https://github.com/rudxowl/PortfolioWeb"style="color: black;"><i class="fa fa-github"></i></a>
+		 </p>
+
+		      <p style="text-align: center; margin-bottom: 0px;"><strong>2019 &copy; Gyungtai Tom Min</strong></p>
+</div>
+</section>
 
 
 		</div><!-- end:colorlib-main -->
