--- a/data_analysis/da.html
+++ b/data_analysis/da.html
@@ -75,7 +75,7 @@
 									<div class="about-desc">
 										<h2>Data Analytics</h2>
 										<hr>
-										<p><a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Click Here</Strong> to check out my code.</a></p>
+										<p><a href="https://github.com/rudxowl/Data_Analytics_in_Python"><strong>Click Here</Strong></a> to check out my code.</p>
 
 
 									</div>
@@ -93,7 +93,7 @@
 									<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 										<div class="col-md-12">
 											<div class="about-desc">
-																						<h3>Automatic Data Analysis Program in Python</h3>
+																						<h3>Automatic Data Analysis</h3>
 																						<p>This program is an automatic analysis program which shows the relationship between sex ratio and the other varialbe user chose. The program provides serveral data analytic test options such as T test, ANOVA test, Regression test.
 																							<br> If you choose one test option it will show you a brif analysis report about the relationship between sex ratio and the other variable</p>
 													</div>
