--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
 				<div class="colorlib-footer">
 						<h3><strong><a href="Resume(Tom_Min).pdf">My Resume</a></strong></h3>
+						<a href="https://github.com/rudxowl"style="color: black;"><i class="fa fa-github"></i></a>
 </div>
 </nav>
 
@@ -440,7 +441,7 @@
 					 <p style="text-align: center; margin-bottom: 0px; font-size: 30px;">
 		 <a href="mailto: rudxowl@gmail.com"style="color: black;"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
 		 <a href="https://www.linkedin.com/in/tom-min-579287136/"style="color: black;"><i class="fa fa-linkedin-square"></i></a>&nbsp;&nbsp;
-		 <a href="https://github.com/rudxowl/PortfolioWeb"style="color: black;"><i class="fa fa-github"></i></a>
+		 <a href="https://github.com/rudxowl"style="color: black;"><i class="fa fa-github"></i></a>
 		 </p>
 
 		      <p style="text-align: center; margin-bottom: 0px;"><strong>2019 &copy; Gyungtai Tom Min</strong></p>
