--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 				<div class="colorlib-footer">
 						<h3><strong><a href="Resume(Tom_Min).pdf">My Resume</a></strong></h3>
-						<h3><strong><a href="https://github.com/rudxowl"style="color: black;"><i class="fa fa-github"></i></a></strong></h3>
+						<h3><strong><a href="https://github.com/rudxowl"style="color: black;">Github</a></strong></h3>
 </div>
 </nav>
 
