--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148963671-1"></script>
@@ -70,17 +67,17 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<!--<li class="active"><a href="#" data-nav-section="home">About</a></li> -->
+						<!--<li class="active"><a href="#" data-nav-section="about">about</a></li> -->
 						<li><a href="#" data-nav-section="about">About</a></li>
-						<!--	<li><a href="#" data-nav-section="services">Projects</a></li> -->
+						<!--	<li><a href="#" data-nav-section="projects">Projects</a></li> -->
 						<li><a href="#" data-nav-section="projects">Projects</a></li>
-					<!--	<li><a href="#" data-nav-section="services">Skills</a></li> -->
+					<!--	<li><a href="#" data-nav-section="skills">Skills</a></li> -->
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
-					<!--	<li><a href="#" data-nav-section="education">Education</a></li> -->
-						<li><a href="#" data-nav-section="experience">Experience</a></li>
+					<!--	<li><a href="#" data-nav-section="work">Experience</a></li> -->
+						<li><a href="#" data-nav-section="work">Experience</a></li>
 						<!--	<li><a href="#" data-nav-section="education">Education</a></li> -->
 							<li><a href="#" data-nav-section="education">Education</a></li>
-					<!--	<li><a href="#" data-nav-section="work">Work</a></li>-->
+					<!--	<li><a href="#" data-nav-section="contact">contact</a></li>-->
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -320,7 +317,7 @@
 				</div>
 			</section>
 
-			<section class="colorlib-experience" data-section="experience">
+			<section class="colorlib-work" data-section="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
